@@ -1,3 +1,8 @@
+2003-03-17  Jean-Claude Wippler  <jcw@equi4.com>
+
+	* pkgIndex.tcl, pkgIndex.tcl.in: mk4vfs rev bumped to 1.9
+	* mk4vfs.tcl: reverted to old translucent/readwrite open modes
+
 2003-03-11  Andreas Kupries  <andreask@activestate.com>
 
 	* doc/vfs.man:             Added doctools documentation derived
